sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:12: error: type mismatch;
 found   : Unit
 required: Boolean
    while ((j > 0) && (copy = true)) {
                            ^